<resources>
    <string name="app_name">ManaCar</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Cerrar sesión</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="action_1">Modificar</string>
    <string name="action_2">Eliminar</string>
    <string name="mainListTitle">Mis Vehículos</string>
    <string name="VehicleManufacturer">Marca y Modelo</string>
    <string name="VehicleMotor">Motor y CV</string>
    <string name="newVehicle">Nuevo Vehículo</string>
    <string name="registrationNumber">0000ABC</string>
    <string name="save_spanish">Guardar</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="welcome">"Bienvenido!"</string>
    <string name="invalid_username">No es un usuario válido</string>
    <string name="invalid_password">La contraseña debe tener más de 5 caracteres</string>
    <string name="login_failed">"Inicio de sesión fallido"</string>
    <string name="action_register">Registrarme</string>
    <string name="lostPassword">¿Has olvidado tu contraseña?</string>
</resources>